<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen10dp"
        android:paddingBottom="@dimen/dimen15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/order_item_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/_5399_egp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen18sp" />

        <TextView
            android:id="@+id/order_item_created_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center"
            android:paddingStart="@dimen/dimen10dp"
            android:paddingEnd="@dimen/dimen10dp"
            android:text="@string/_5399_egp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="@dimen/dimen10dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:text="@string/order_number"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen20sp" />

            <TextView
                android:id="@+id/order_item_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="@dimen/dimen10dp"
                android:paddingEnd="@dimen/dimen10dp"
                android:text="@string/order_date"
                android:textColor="@color/vDarkGray"
                android:textSize="@dimen/dimen18sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>