<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto" 
    android:layout_height="wrap_content"
     android:layout_width="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        card_view:cardCornerRadius="@dimen/dimen10dp"
        card_view:cardElevation="@dimen/dimen5dp"
        card_view:cardUseCompatPadding="true"
        card_view:elevation="@dimen/dimen1dp">


        <LinearLayout
            android:id="@+id/productItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cart_item_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/cart_item_image"
                android:layout_width="@dimen/dimen140dp"
                android:layout_height="@dimen/dimen150dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen10dp"
                android:contentDescription="@string/product_image"
                android:src="@drawable/samsung_galaxy_a70" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cart_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:layout_marginTop="@dimen/dimen20dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/samsung_galaxy_a70"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cart_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:layout_marginTop="@dimen/dimen20dp"
                    android:text="@string/_5399_egp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cart_item_shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10dp"
                    android:layout_marginTop="@dimen/dimen20dp"
                    android:text="FREE Shipping"
                    android:drawableStart="@drawable/ic_check_green"
                    android:drawablePadding="@dimen/dimen5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

<!--                    <ImageView-->
<!--                        android:id="@+id/imgShare"-->
<!--                        android:layout_width="@dimen/dimen30dp"-->
<!--                        android:layout_height="@dimen/dimen30dp"-->
<!--                        android:layout_margin="@dimen/dimen20dp"-->
<!--                        android:contentDescription="@string/share_product"-->
<!--                        android:src="@drawable/ic_share" />-->

                    <ImageView
                        android:id="@+id/cart_item_delete"
                        android:layout_width="@dimen/dimen30dp"
                        android:layout_height="@dimen/dimen30dp"
                        android:layout_margin="@dimen/dimen20dp"
                        android:contentDescription="@string/add_to_cart"
                        android:src="@drawable/ic_delete" />

                    <ImageView
                        android:id="@+id/cart_item_purchase"
                        android:layout_width="@dimen/dimen30dp"
                        android:layout_height="@dimen/dimen30dp"
                        android:layout_margin="@dimen/dimen20dp"
                        android:contentDescription="@string/add_to_favourite"
                        android:src="@drawable/ic_order" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
